--- a/final/conclusion.tex
+++ b/final/conclusion.tex
@@ -1,1 +1,10 @@
 \section{Conclusion}
+
+In this paper, we discuss the security concerns associated with containerized applications. We review different types of container virtualization, the underlying mechanisms, Linux kernel features, container runtime environments, and their alternatives. Additionally, we discussed the security issues that arise from using containers.
+
+
+We have reviewed well-known security vulnerabilities found in the Linux kernel and container runtimes, and this review has clearly demonstrated the importance of in-depth security measures and the need for a variety of tools to address these vulnerabilities. Some tools can help to detect zero-day vulnerabilities and prevent containers from escaping.
+
+Next, the quality assessment of tools for static vulnerability analysis demonstrated the need for such tools in CI/CD pipelines to protect against known vulnerabilities in the base layers and third-party packages. The specific tool is less important than having at least some of them.
+
+In conclusion, the security of containerized applications should be taken into consideration at all stages of the software development process, as this area is continuously evolving and gaining popularity. The current era of orchestration tools such as Kubernetes presents new security challenges that must be addressed.
