--- a/final/introduction.tex
+++ b/final/introduction.tex
@@ -1,8 +1,13 @@
 \section{Introduction}
 
-The concept of containerization traces its origins back to 1979, when the chroot syscall was initially added to Version 7 Unix \cite{1}. Containerization significantly increased in popularity since 2013, when Docker began to dominate the market, and now containers play an essential role in modern software development and distribution practices. Since the technology has become widespread, the security concerns became more evident. As a result, numerous vulnerabilities particularly related to containerized applications were discovered within the popular platforms, and various defensive mechanisms were proposed to address them.
+The concept of containerization traces its origins back to 1979, when the chroot system call was first introduced to Version 7 Unix \cite{1}. Containerization has significantly increased in popularity since 2013, when Docker began to dominate the market. Now, containers play an essential role in modern software development and distribution practices. Since the technology matured, the security concerns have become more evident. As a result, numerous vulnerabilities particularly related to containerized applications were discovered within the popular platforms, and various defensive mechanisms have been proposed to address them.
 
-The objective of this paper is to ....
+The objective of this paper is to thoroughly examine the fundamentals of containerization, explore modern technologies used in this field and investigate the security concerns associated with these technologies. Specifically, attention will be paid to the defensive measures implemented in the Linux kernel as well as the limits of their applicability, including their ability to prevent container escape attacks. Furthermore, various tools for static analysis of the security of container images available on the market will be evaluated and a quality assessment of the results produced by these tools will be conducted.
 
-The rest of the work is organised in the following way. 
+The rest of the work is organised in the following manner. The first chapter covers the theoretical foundations of containerization, specifically, Linux kernel isolation features and various techniques for managing containers with container runtimes. Next, we will examine the security landscape of containerized applications, including the causes of security breaches in containers and container escape attacks. Finally, we will explore ways to enhance security, including kernel security features, the benefits of using VM-based container runtimes and static analysis tools to secure images.
 
+The second chapter focuses on well-known security vulnerabilities found in the Linux kernel and container runtimes, as well as the ways in which these vulnerabilities can lead to container escapes. The effectiveness of hardening tools in mitigating these and yet to be reported vulnerabilities will also be discussed.
+
+The third chapter covers the tools for static vulnerability analysis. Previous research in this area will be reviewed, and six scanning tools, including Clair, Trivy, Docker Scout, Anchore Grype, Snyk and Google Artifact Registry, will be evaluated based on the results they produce. A conclusion will be drawn about their effectiveness and suitability for hardening containerized applications against known vulnerabilities.
+
+In conclusion, the overall findings and limitations of the study will be presented, and recommendations for securing containerized applications will be provided.
