--- a/final/refs.bib
+++ b/final/refs.bib
@@ -338,6 +338,18 @@
   url       = {\url{https://doi.org/10.1007/978-3-030-71017-0\_22}}
 }
 
+@inproceedings{c:19,
+  author    = {Reeves, Michael and Tian, Dave Jing and Bianchi, Antonio and Celik, Z. Berkay},
+  booktitle = {2021 IEEE Secure Development Conference (SecDev)},
+  title     = {Towards Improving Container Security by Preventing Runtime Escapes},
+  year      = {2021},
+  volume    = {},
+  number    = {},
+  pages     = {38-46},
+  doi       = {10.1109/SecDev51306.2021.00022},
+  url       = {\url{https://ieeexplore.ieee.org/document/9652631}}
+}
+
 @inproceedings{c:2,
   author    = {Brady, Kelly and Moon, Seung and Nguyen, Tuan and Coffman, Joel},
   booktitle = {2020 10th Annual Computing and Communication Workshop and Conference (CCWC)},
@@ -638,13 +650,13 @@
   url    = {{\url{https://github.com/opencontainers/runc }. [Accessed: \today]}}
 }
 
+
 @misc{gh:runnc,
   author = {},
   title  = {nabla-containers/runnc},
   note   = {\textit{github.com}},
   url    = {{\url{https://github.com/nabla-containers/runnc}. [Accessed: \today]}}
 }
-
 
 @misc{gh:snyk,
   author = {},
@@ -693,13 +705,13 @@
   url    = {{\url{https://man7.org/linux/man-pages/man7/capabilities.7.html}. [Accessed: \today]}}
 }
 
+
 @misc{m:cgroups,
   author = {},
   title  = {{cgroups(7) — Linux manual page}},
   note   = {\textit{man7.org}, Dec. 22, 2023},
   url    = {{\url{https://man7.org/linux/man-pages/man7/cgroups.7.html}. [Accessed: \today]}}
 }
-
 
 @misc{m:crun,
   author = {},
@@ -796,6 +808,13 @@
   title  = {{Anchore Unveils New Open Source Tools For Automated DevSecOps Pipeline Security}},
   note   = {\textit{prnewswire.com}, Oct. 06, 2020},
   url    = {{\url{https://www.prnewswire.com/news-releases/anchore-unveils-new-open-source-tools-for-automated-devsecops-pipeline-security-301145501.html}. [Accessed: \today]}}
+}
+
+@misc{s:christoph1,
+  author = {Christophe Tafani-Dereeper},
+  title  = {{Container Breakout Vulnerabilities}},
+  note   = {Mar. 1, 2024},
+  url    = {{\url{https://www.container-security.site/attackers/container_breakout_vulnerabilities.html}. [Accessed: \today]}}
 }
 
 @misc{s:clair-intro2,
@@ -995,4 +1014,18 @@
   address   = {Cham},
   pages     = {230-251},
   url       = {\url{https://doi.org/10.1007/978-3-319-60876-1_11}}
+}
+
+@misc{s:h:2,
+  author = {Rory McCune},
+  title  = {{Dirty Pipe Linux Vulnerability: Overwriting Files in Container Images}},
+  note   = {\textit{aquasec.com}, Mar. 8, 2022},
+  url    = {{\url{https://www.aquasec.com/blog/cve-2022-0847-dirty-pipe-linux-vulnerability}. [Accessed: \today]}}
+}
+
+@misc{s:h:4,
+  author = {Itay Vaknin},
+  title  = {{DirtyPipe (CVE-2022-0847) — the new DirtyCoW?}},
+  note   = {\textit{aquasec.com}, Mar. 9, 2022},
+  url    = {{\url{https://jfrog.com/blog/dirtypipe-cve-2022-0847-the-new-dirtycow}. [Accessed: \today]}}
 }
