--- a/final/settings/format.tex
+++ b/final/settings/format.tex
@@ -29,12 +29,12 @@
 \hypersetup{colorlinks=true, linkcolor=black, filecolor=blue, citecolor=black, urlcolor=blue}
 
 \usepackage[section]{placeins}
-\captionsetup[figure]{labelformat=simple, labelsep=endash, justification=centering, belowskip=-1.4em}
+\captionsetup[figure]{labelformat=simple, labelsep=endash, justification=centering, belowskip=-1em}
 \captionsetup[table]{labelsep=endash, justification=raggedright, singlelinecheck=off}
 \captionsetup[lstlisting]{labelformat=simple, labelsep=endash}
 \captionsetup[listing]{labelformat=simple, labelsep=endash}
 
-% \setlength{\intextsep}{12pt plus 0pt minus 0pt}
+\setlength{\intextsep}{8pt plus 0pt minus 0pt}
 
 
 % basic font size for headings 
