--- a/final/settings/packages.tex
+++ b/final/settings/packages.tex
@@ -9,7 +9,7 @@
 % \usepackage[labelsep=period]{caption}
 \usepackage{caption}
 \usepackage{graphicx} % пакет для использования графики (чтобы вставлять рисунки, фотографии и пр.)
-
+\usepackage{subfig}
 
 % качественные листинги кода
 % \usepackage{minted}
@@ -41,3 +41,5 @@
 \renewcommand\theFancyVerbLine{\normalsize\arabic{FancyVerbLine}}
 
 \usepackage{cite}
+
+\usepackage[table]{xcolor}
